cmake_minimum_required(VERSION 3.10)
# set the project name and version
project(TTT VERSION 0.0.1)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
# find_package(OpenSSL REQUIRED)
find_package(BDWgc REQUIRED)

include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/utils)
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "lib/*.c")
file(GLOB_RECURSE UTILS RELATIVE ${CMAKE_SOURCE_DIR} "utils/*.c")
add_executable(TTT_server server_main.c ${SOURCES} ${UTILS})
add_executable(TTT_client client_main.c ${SOURCES} ${UTILS})
add_executable(TTT_test_user tests/test_user.c ${SOURCES} ${UTILS})
target_link_libraries(TTT_server BDWgc::gc)
target_link_libraries(TTT_client BDWgc::gc)
target_link_libraries(TTT_test_user BDWgc::gc)
add_test(TTT_test_user TTT_test_user)
ENABLE_TESTING()